<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent"
    tools:context=".Perfil">

    <TextView
        android:id="@+id/btn_agregar_imagen"
        android:layout_width="191dp"
        android:layout_height="67dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/btn_agregar_foto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario_imagen_perfil" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/usuario_imagen_perfil"
        android:layout_width="wrap_content"
        android:layout_height="118dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:src="@drawable/icon_photo"
        app:layout_constraintBottom_toTopOf="@+id/txt_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_editar_perfil"
        android:layout_width="316dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_secondary"
        android:text="Editar mi perfil"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txt_telefono"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txt_correo"
        android:layout_width="322dp"
        android:layout_height="47dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/correo_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_contrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txt_contrasena"
        android:layout_width="322dp"
        android:layout_height="47dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/contrasena_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/txt_contrasena_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txt_contrasena_2"
        android:layout_width="322dp"
        android:layout_height="47dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/repite_tu_contrasena"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_editar_perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ProgressBar
        android:id="@+id/progress_perfil"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="416dp"
        android:layout_height="14dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/color_primero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>